--- a/Twitter_client_v2.0/VSPersonPageViewController.xib
+++ b/Twitter_client_v2.0/VSPersonPageViewController.xib
@@ -4,22 +4,22 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="VSMainPageViewController">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="VSPersonPageViewController">
             <connections>
-                <outlet property="buttonSendTweetReference" destination="W8f-03-joq" id="dG9-Mg-SeA"/>
-                <outlet property="countSymbols" destination="dPy-kJ-Cyr" id="nae-3g-4bn"/>
-                <outlet property="folowerButtonReference" destination="yWq-U9-Fzr" id="B4e-be-nQJ"/>
-                <outlet property="folowingButtonReference" destination="BcW-Tk-J5x" id="kKv-up-ZHq"/>
-                <outlet property="fullName" destination="Gr7-s6-RMi" id="sej-Dq-sYy"/>
-                <outlet property="hacheName" destination="xSh-r5-JQS" id="4VL-Sw-hfQ"/>
-                <outlet property="homeButton" destination="AwA-3T-GMD" id="wqv-Xi-2yv"/>
-                <outlet property="infoButton" destination="ivr-HJ-dWk" id="s3l-3n-Bks"/>
-                <outlet property="loadingIndicator" destination="OGM-LZ-1GV" id="wTE-nm-Dod"/>
-                <outlet property="tabBar" destination="Gsh-QN-LL5" id="BiK-pU-JkX"/>
-                <outlet property="textView" destination="eEa-n9-kGE" id="bKA-u3-b2B"/>
-                <outlet property="tweetList" destination="PwD-iI-A7A" id="nOE-pw-iFc"/>
-                <outlet property="tweetsButtonReference" destination="fOg-cR-BWS" id="Unp-Be-wfX"/>
-                <outlet property="usersAvatar" destination="IqT-s1-I9Q" id="aEb-xE-UIf"/>
+                <outlet property="buttonSendMessageReference" destination="5gc-wA-oW3" id="RkA-Me-GKQ"/>
+                <outlet property="countSymbols" destination="w4c-oV-JaN" id="cFj-DU-B24"/>
+                <outlet property="folowerButtonReference" destination="TzM-zL-Ghe" id="r7M-Dv-j3C"/>
+                <outlet property="folowingButtonReference" destination="0UM-L6-jke" id="WYq-pE-PXu"/>
+                <outlet property="fullName" destination="ghi-nj-eDC" id="OUQ-ZI-4Hx"/>
+                <outlet property="hacheName" destination="3B4-U4-lc9" id="ZND-IQ-krj"/>
+                <outlet property="homeButton" destination="mPG-qj-7XV" id="Gqo-6t-3AP"/>
+                <outlet property="infoButton" destination="LCy-o2-7qC" id="8Cy-8e-JAI"/>
+                <outlet property="loadingIndicator" destination="P9A-aD-so1" id="72n-Gw-5Pi"/>
+                <outlet property="tabBar" destination="deP-cB-6Cb" id="qPu-4D-U5V"/>
+                <outlet property="textView" destination="aY8-wz-g5w" id="9Lh-67-P9a"/>
+                <outlet property="tweetList" destination="gND-XQ-dgL" id="VFp-D3-I3H"/>
+                <outlet property="tweetsButtonReference" destination="RLh-ML-qYX" id="Q8j-3K-bLL"/>
+                <outlet property="usersAvatar" destination="n3a-Q6-dYl" id="2Ca-gE-f9E"/>
                 <outlet property="view" destination="1" id="3"/>
             </connections>
         </placeholder>
@@ -28,31 +28,31 @@
             <rect key="frame" x="0.0" y="64" width="320" height="504"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tabBar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="Gsh-QN-LL5">
+                <tabBar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="deP-cB-6Cb">
                     <rect key="frame" x="0.0" y="455" width="320" height="49"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                     <color key="backgroundColor" red="0.1540516649" green="1" blue="0.1613135879" alpha="1" colorSpace="calibratedRGB"/>
                     <items>
-                        <tabBarItem title="Info" image="book-7.png" id="ivr-HJ-dWk" userLabel="df"/>
-                        <tabBarItem title="Home" image="home-7.png" id="AwA-3T-GMD"/>
-                        <tabBarItem title="Tweets list" image="list-star-7.png" id="PwD-iI-A7A"/>
+                        <tabBarItem title="Info" image="book-7.png" id="LCy-o2-7qC" userLabel="df"/>
+                        <tabBarItem title="Home" image="home-7.png" id="mPG-qj-7XV"/>
+                        <tabBarItem title="Tweets list" image="list-star-7.png" id="gND-XQ-dgL"/>
                     </items>
                     <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <color key="barTintColor" red="0.0" green="0.47194343065693428" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="barTintColor" red="0.0" green="0.4719434307" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <color key="selectedImageTintColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                 </tabBar>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="IqT-s1-I9Q">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="n3a-Q6-dYl">
                     <rect key="frame" x="20" y="20" width="100" height="100"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 </imageView>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Gr7-s6-RMi">
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ghi-nj-eDC">
                     <rect key="frame" x="150" y="20" width="134" height="66"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" id="fOg-cR-BWS">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" id="RLh-ML-qYX">
                     <rect key="frame" x="13" y="158" width="87" height="60"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.16825552520000001" green="0.4675054085" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -61,10 +61,10 @@
                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <connections>
-                        <action selector="myTweetsList:" destination="-1" eventType="touchUpInside" id="ngc-OB-lNs"/>
+                        <action selector="personTweetsList:" destination="-1" eventType="touchUpInside" id="Utx-7b-8aH"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" id="BcW-Tk-J5x">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" id="0UM-L6-jke">
                     <rect key="frame" x="115" y="158" width="90" height="60"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.16825552520000001" green="0.4675054085" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -74,10 +74,10 @@
                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <connections>
-                        <action selector="folowingList:" destination="-1" eventType="touchUpInside" id="G5A-1A-hBv"/>
+                        <action selector="folowingList:" destination="-1" eventType="touchUpInside" id="iLU-jb-r3G"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" id="yWq-U9-Fzr">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" id="TzM-zL-Ghe">
                     <rect key="frame" x="220" y="158" width="87" height="60"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.16825552520000001" green="0.4675054085" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -86,49 +86,49 @@
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
-                        <action selector="folowersList:" destination="-1" eventType="touchUpInside" id="Isg-fm-aOk"/>
+                        <action selector="folowersList:" destination="-1" eventType="touchUpInside" id="tJO-Oe-LPu"/>
                     </connections>
                 </button>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xSh-r5-JQS">
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="3B4-U4-lc9">
                     <rect key="frame" x="150" y="87" width="142" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" id="OGM-LZ-1GV">
+                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" id="P9A-aD-so1">
                     <rect key="frame" x="150" y="242" width="20" height="20"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </activityIndicatorView>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Compose new Tweet..." id="eEa-n9-kGE">
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Send message..." id="aY8-wz-g5w">
                     <rect key="frame" x="20" y="250" width="280" height="34"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <color key="tintColor" red="0.0" green="0.67450980392156867" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="tintColor" red="0.0" green="0.67450980390000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     <dataDetectorType key="dataDetectorTypes" calendarEvent="YES"/>
                 </textView>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="dPy-kJ-Cyr">
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="w4c-oV-JaN">
                     <rect key="frame" x="220" y="326" width="42" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" red="0.0" green="0.67450980392156867" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="textColor" red="0.0" green="0.67450980390000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="W8f-03-joq">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="5gc-wA-oW3">
                     <rect key="frame" x="261" y="363" width="46" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <state key="normal" title="Send" backgroundImage="background.jpg">
                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <connections>
-                        <action selector="sendTweet:" destination="-1" eventType="touchUpInside" id="Ej7-qK-x2p"/>
+                        <action selector="sendMessage:" destination="-1" eventType="touchUpInside" id="ovq-M9-AHe"/>
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-            <color key="tintColor" red="0.0" green="0.67629447992700731" blue="0.93171190693430661" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
